[package]
name = "near-enough"
version = "0.1.0"
authors = ["Simon Palmer <palmer.simond@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", tag="3.1.0" }
borsh = "0.7.1"
hex = "0.4.2"
wee_alloc = "0.4.5"

[dev-dependencies]
# near-sdk-sim = "3.2.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
